# MCPace

./: .editorconfig  .env.example  .gitattributes  .gitignore  .gitleaks.toml  CHANGELOG.md  CITATION.cff  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DECISIONS.md  README.md  ROADMAP.md  SECURITY.md  SOURCE_ARCHIVE_NOTE.txt  START-HERE.md  STATE.md  SUPPORT.md  TODO.md  auth.ps1  autostart.ps1  backup.ps1  boot.ps1  build-release.ps1  check.ps1  cleanzip_fast.py  deny.toml  install.ps1  manager.cmd  manager.settings.json  manager.sh  mcp_settings.json  mcpace.config.json  mcpace_cleanup_private_state.sh  mcpace_linux_autoflow_hardening_v3_safe.patch  mcpace_linux_autoflow_hardening_v3_safe.stat  mcpace_linux_autoflow_report_ru_20260511.md  mcpace_linux_base_checklist_ru_20260511.md  package-lock.json  (+11 more)
.codex/: config.toml
.config/: nextest.toml
.github/: actionlint.yaml  dependabot.yml  dependency-review-config.yml  labels.yml  pull_request_template.md  release.yml  zizmor.yml
catalog/: approved-servers.json
docs/: README.md  adaptive-edge-case-coverage.md  adaptive-mcp-orchestration.md  adaptive-worker-plan.md  adjacent-tools-landscape.md  api-contract.md  architecture-boundaries.md  architecture-simplification.md  architecture.md  browser-e2e-and-external-tooling.md  bug-hunting-and-fix-playbook.md  bug-lifecycle.md  cli-migration.md  client-metadata-routing.md  client-surface-matrix.md  codex-mcpace-guide.md  configuration.md  dashboard-base.md  dashboard-chaos-verification.md  defect-taxonomy-and-labels.md  developer-operating-mode.md  distribution-modes.md  dynamic-adapter.md  endgame-readiness.md  eval-plan.md  frontend.md  github-launch-plan.md  github-launch-playbook.md  github-repo-kit.md  go-migration-plan.md  greenfield-options-matrix.md  greenfield-single-hub-architecture.md  holistic-runtime-model.md  host-setup.md  ideal-product-backlog.md  install-autostart-distribution.md  lab-harness.md  legacy-powershell-removal.md  legacy-retirement-plan.md  library-simplification-audit.md  (+74 more)
eval/: README.md  auto-classification-readiness.json  dataset-plan.json  final-auto-pipeline.json  indirect-evidence-model.json  official-server-live-probe-2026-07-11.json  package-metadata-sweep.json  popular-server-corpus.json  random-100-npm-sweep.json  random-100-npm-sweep.partial.jsonl  random-500-npm-sweep.json  random-500-npm-sweep.partial.jsonl  random-500-reviewed-each-server.csv  random-500-reviewed-each-server.json  random-live-npm-sweep.json  random-server-audit.json  runtime-capabilities.json  runtime-evidence-sources.json  scenario-matrix.json  scoring-rubric.json
evidence/: contract-test.out  lint-npm.json  linux-auto-host.json  secret-scan.json
(+1005 files in other folders)
