[package]
name = "mcpace"
version = "0.7.7"
edition = "2021"
license = "Apache-2.0"
publish = false

[dependencies]
auto-launch = { path = "crates/compat/auto-launch" }
getrandom = { path = "crates/compat/getrandom" }
serde_json = { path = "crates/compat/serde_json" }
which = { path = "crates/compat/which" }

[profile.release]
# Optimize the shipped CLI/runtime binary for maximum shipped artifact compactness.
# Fat LTO + opt-level z + stripped symbols are used for this ready release binary.
opt-level = "z"
lto = "fat"
codegen-units = 1
strip = "symbols"
panic = "abort"
incremental = false
debug = false

[profile.perf]
# Speed-oriented profile for A/B latency checks against the compact release profile.
inherits = "release"
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols"
panic = "abort"
incremental = false
debug = false
