[package]
name = "mcpace"
version = "0.7.9"
edition = "2021"
license = "Apache-2.0"
publish = false

[dependencies]
auto-launch = "0.6"
getrandom = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
which = "8"
clap = { version = "4", features = ["derive"] }

[profile.release]
# Optimize the shipped CLI/runtime binary for maximum shipped artifact compactness.
# Fat LTO + opt-level z + stripped symbols are used for this ready release binary.
opt-level = "z"
lto = "fat"
codegen-units = 1
strip = "symbols"
panic = "abort"
incremental = false
debug = false

[profile.perf]
# Speed-oriented profile for A/B latency checks against the compact release profile.
inherits = "release"
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols"
panic = "abort"
incremental = false
debug = false
